[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://src/scenes/AudioTrackOverlay.gd" id="1"]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id="2"]
[ext_resource type="Script" path="res://src/ui/GlassPanel.gd" id="3"]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id="4"]
[ext_resource type="PackedScene" path="res://ui/components/TrackSelector.tscn" id="5"]

[node name="AudioTrackOverlay" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2")
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.04, 0.09, 0.62)
mouse_filter = 0

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="ColorRect" parent="Center"]
custom_minimum_size = Vector2(560, 300)
layout_mode = 2
color = Color(0.12, 0.18, 0.32, 0.22)
mouse_filter = 2
script = ExtResource("3")
blur_radius = 5.2
tint = Color(0.12, 0.18, 0.32, 0.22)
edge = Color(0.9, 0.96, 1, 0.2)
corner_radius = 0.11
edge_width = 1.1
warp_intensity = 0.12
strength_x = 8.0
strength_y = 8.0
chromatic_strength = 0.18

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 26
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 26
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 14
mouse_filter = 2

[node name="TopInset" type="Control" parent="Center/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Audio"
horizontal_alignment = 1

[node name="TrackSelector" parent="Center/Panel/Margin/VBox" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 3
collapsed_text = "Track"

[node name="Close" type="Button" parent="Center/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "Close"
script = ExtResource("4")

[node name="BottomInset" type="Control" parent="Center/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
mouse_filter = 2

[connection signal="gui_input" from="Backdrop" to="." method="_on_backdrop_gui_input"]
[connection signal="track_changed" from="Center/Panel/Margin/VBox/TrackSelector" to="." method="_on_track_selector_track_changed"]
[connection signal="pressed" from="Center/Panel/Margin/VBox/Close" to="." method="_on_close_pressed"]
